2009-10-08  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (catcode_special): default to maybe,
	and only set to true for processing Texinfo, not LaTeX.
	Request from Kurt Hornik, also Debian bug #534458.

2009-09-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

        * build-aux/gendocs.sh: Fix copyright header to match GPLv3
        recommendation.

2009-09-04  Karl Berry  <karl@gnu.org>

	* install-info/install-info.c (munge_old_style_debian_options):
	malloc what we sprintf.
	From Matt McCutchen, http://savannah.gnu.org/bugs/?27376.

2009-08-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\rgbDarkRed, \rgbBlack): new macros, replacing
	\cmykDarkRed and \cmykBlack.  Change uses.  Said to print
	considerably better.
	From: Andrew Hawryluk, 12 Aug 2009 21:22:06.`,

2009-07-25  Oleg Katsitadze <olegkat@gmail.com>

	* doc/texinfo.tex (\commondummiesnofonts): Added \email.

2009-05-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\textdegree): output index sort string as `o',
	since that's how we output it in Info.  Suggested by Patrice.

2009-05-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (firstparagraphindent): mistaken
	mention of @paragraphindent.  Report from Dilyan Palauzov,
	10 May 2009 21:41:32.
	(@@-Command Summary): forgot @firstparagraphindent{}.
	* doc/refcard/txirefcard.tex: likewise.

2009-05-06  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (@@-Command Summary): forgot @textdegree{}.
	* doc/refcard/txirefcard.tex: likewise.

2009-04-20  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (run_tex): pdf output for texinfo is supported.

2009-04-15  Akim Demaille  <akim@epita.fr>

	texi2dvi: use texindy if available.
	* util/texi2dvi (run_index): Use texindy if available.

2009-04-15  Akim Demaille  <akim@epita.fr>

	texi2dvi: initial support for tex4ht.
	* util/texi2dvi ($latex2html, --tex4ht, run_tex4ht, destdir): New.
	(run_tex): Accept an HTML output.
	(run_tex_suite): Call run_tex4ht.
	Install the output if needed.